@@ -33,6 +33,7 @@ v30.0.00
     Tweaks & Additions
         System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
         System: switched interface strings from Value Added License to Catalyst License
+        System: changed intl PHP extension from required to recommended
         Activities: added the option for parents to register their children in activities
         Activities: added student tags on the Manage Enrolment page
         Activities: added a description field to the cost section for activities
